# AutoGUI

./: .gitignore  DATASET_CARD.md.md  README.md  custom_req.txt  highres_autogui_ckpt  pyproject.toml  requirements.txt  requirements_agent.txt  test.json
autogui_model/: config.json  config_bak.json  configuration_autogui.py  modeling_autogui.py  tokenization_qwen.py  tokenizer_config.json  visual.py
eval_scripts/: eval_slime.sh
finetune/: finetune.py  finetune1.py  finetune_autogui_lora.sh
lmms_eval/: __main__.py  evaluator.py  utils.py
lmms_eval/api/: metrics.py  task.py
lmms_eval/models/: __init__.py  aguvis.py  autogui.py  autogui_llava.py  autogui_plus.py  autogui_qwen2_vl.py  claude.py  cogagent_chat_hf.py  ferretui.py  florence2.py  gpt4v.py  idefics.py  internvl2.py  internvl_chat.py  llama_vision.py  llava.py  llava_hf.py  llava_model.py  llava_onevision.py  llava_ov.py  llava_sglang.py  minicpm_v.py  monkey.py  osatlas.py  osatlas4b.py  paligemma.py  qwen2_vl.py  qwen2_vl_alicloud.py  qwen2_vl_cloud.py  qwen2p5_vl.py  qwen2vl_showui.py  qwen_vl.py  qwen_vl_chat.py  seeclick.py  showui.py  showui_autogui.py  slime.py  tinyclick.py  uground.py  uground_llava.py  (+12 more)
lmms_eval/tasks/: __init__.py
pretrain/: funcpred_test.py  process_utils.py  prompt_lib.py  screenspot_test.py  task_prompts.py
utils/: 0_convert_android_data_qwen2-format.py  1_convert_android_data_qwen1-format.py  2_test_loss.py  check_evalset_integrity.py  make_vwb_samples.py  merge_model.py
vlm_llm_exp/: 0_test_vlm_gnd_mind2web.py  1_vlm_verified-by_llm.py  autogui_model.py  utils.py
(+82 files in other folders)
