[tool.black]
line-length = 240

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[tomli]>=6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "lmms_eval"
version = "0.1.2"
authors = [
    { name = "AutoGUI Team"},
]
description = "AutoGUI repo"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
]

[tool.setuptools.packages.find]
include = ["lmms_eval*"]

[tool.setuptools.package-data]
lmms_eval = ["**/*.yaml", "tasks/**/*"]

[project.scripts]
lmms-eval = "lmms_eval.__main__:cli_evaluate"
lmms_eval = "lmms_eval.__main__:cli_evaluate"

[project.urls]
Homepage = "https://autogui-project.github.io/"
Repository = "https://github.com/BraveGroup/AutoGUI"
